deploy: dd649b9b90782c53b40e8aca2f91f48f413a0bbd

--- a/serve_config.json
+++ b/serve_config.json
@@ -6,8 +6,11 @@
   "calendar": {
     "colors": {
       "---": "#bed972",
-      "qa": "#4FCAEB",
-      "talk": "#ccc"
+      "online": "#4383EC",
+      "onsite": "#C3542E",
+      "replay": "#F0C808",
+      "special": "#273C2C",
+      "talk": "#403D58"
     },
     "sunday_saturday": true
   },
