deploy: b9c7659b7fd85f0ecf9039b9ab5864be349bda48

--- a/serve_config.json
+++ b/serve_config.json
@@ -6,9 +6,9 @@
   "calendar": {
     "colors": {
       "---": "#bed972",
-      "online": "#4383EC",
+      "online": "#16BAC5",
       "onsite": "#C3542E",
-      "replay": "#F0C808",
+      "replay": "#AF4D98",
       "special": "#273C2C",
       "talk": "#403D58"
     },
